--- a/styles/common.css
+++ b/styles/common.css
@@ -71,6 +71,7 @@ header a {
 .dropdown-content {
   display: none;
   position: absolute;
+  background-color: white;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
