--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -1,4 +1,5 @@
 main {
+  margin-top: 50px;
   display: grid;
   grid-template-columns: 1.6fr 0.4fr;
   grid-gap: 20px;
@@ -9,7 +10,7 @@ main h1 {
 }
 
 main img {
-  width: 250px;
+  width: 200px;
 }
 
 span.highlight {
@@ -39,5 +40,3 @@ main button:hover {
     grid-row: 1;
   }
 }
-
-
