responsive main page

--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -42,6 +42,9 @@ main button:hover {
 }
 
 @media (min-width: 850px) {
+  main div:first-child{
+    margin-top: 30px;
+  }
   main img{
     width: 30vw;
     max-width: 300px;
