remove src folder to only keep pages/

--- a/components/header.html
+++ b/components/header.html
@@ -18,5 +18,5 @@
       <a href="#">Types</a>
     </div>
   </div>
-  <a href="/src/pages/support.html">Support</a>
+  <a href="/pages/support.html">Support</a>
 </div>
