--- a/styles/pages/support.css
+++ b/styles/pages/support.css
@@ -1,7 +1,3 @@
-.inputs {
-  display: flex;
-}
-
 h1 {
     color: var(--primary-color);
 }
@@ -11,19 +7,33 @@ h2 {
 }
 
 .contact-inputs {
-  margin-top: 10px;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
-.contact-inputs input[for="message"] {
-  background-color: red;
+
+#inputs :first-child :first-child {
+    margin-right: 50px;
+}
+
+#nom, #prenom, #email, #telephone {
+    width: 250px;
+}
+
+
+#checkbox-recontact{
+    display: flex;
+    flex-direction: row;
+}
+
+#message{
+    width: 350px;
+    height: 150px;
 }
 
 .contact-inputs:hover {
   color: var(--borders-color);
-}
-
-.contact-inputs:required {
-  background-color: red;
 }
 
 form {
@@ -32,10 +42,4 @@ form {
   border-radius: 16px;
   background-color: #f9f9f9;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-#inputs{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
