--- a/styles/pages/support.css
+++ b/styles/pages/support.css
@@ -1,35 +1,36 @@
 h1 {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 h2 {
-    color: var(--second-color);
+  color: var(--second-color);
 }
 
 .contact-inputs {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
 }
-
 
 #inputs :first-child :first-child {
-    margin-right: 50px;
+  margin-right: 50px;
 }
 
-#nom, #prenom, #email, #telephone {
-    width: 250px;
+#nom,
+#prenom,
+#email,
+#telephone {
+  width: 250px;
 }
 
-
-#checkbox-recontact{
-    display: flex;
-    flex-direction: row;
+#checkbox-recontact {
+  display: flex;
+  flex-direction: row;
 }
 
-#message{
-    width: 350px;
-    height: 150px;
+#message {
+  width: 350px;
+  height: 150px;
 }
 
 .contact-inputs:hover {
@@ -43,3 +44,18 @@ form {
   background-color: #f9f9f9;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+
+@media (max-width: 450px) {
+    #message {
+        width: 70vw;
+    }
+    #nom,
+    #prenom,
+    #email,
+    #telephone {
+    width: 55vw;
+    }
+}
+
+
