--- a/styles/pages/support.css
+++ b/styles/pages/support.css
@@ -1,7 +1,13 @@
 div > h1,
-h2 {
+h3 {
   display: flex;
-  justify-content: center;
+  justify-content: center;;
+}
+
+#inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
@@ -18,9 +24,6 @@ h2 {
   flex-direction: column;
 }
 
-#inputs :first-child :first-child {
-  margin-right: 50px;
-}
 
 #nom,
 #prenom,
@@ -30,11 +33,6 @@ h2 {
   margin-bottom: 5px;
 }
 
-#checkbox-recontact {
-  display: flex;
-  flex-direction: row;
-}
-
 form .form-label {
   color: var(--second-color);
 }
@@ -42,6 +40,11 @@ form .form-label {
 #message {
   width: 350px;
   height: 150px;
+}
+
+#choix-contact{
+  display:flex;
+  justify-content: space-evenly;
 }
 
 .contact-inputs:hover {
