--- a/styles/common.css
+++ b/styles/common.css
@@ -90,7 +90,8 @@ header a {
   display: block;
 }
 
-main button {
+main button,
+main a {
   border: none;
   color: white;
   background-color: var(--second-color);
@@ -98,9 +99,13 @@ main button {
   text-align: center;
   height: 40px;
   width: 120px;
-  font-size: 800;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
 }
 
-main button:hover {
+main button:hover,
+main a:hover {
   background-color: var(--third-color);
 }
