--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -1,7 +1,9 @@
+/* espace entre le main et le header */
 main {
   margin-top: 50px;
 }
 
+/* contenu: h1, p et img */
 #landing {
   display: grid;
   grid-template-columns: 1.6fr 0.4fr;
@@ -12,6 +14,7 @@ main {
   width: 200px;
 }
 
+/* couleur sur "vos rêves" et "clics" */
 span.highlight {
   color: var(--primary-color);
 }
@@ -20,28 +23,21 @@ span.highlight {
   #landing {
     grid-template-columns: 1fr;
   }
+  /* illustration au dessus du texte en responsive */
   #landing div:last-child {
     grid-row: 1;
   }
 }
 
 @media (min-width: 850px) {
+  /* alignement avec l'image en responsive  */
   #landing div:first-child {
     margin-top: 30px;
   }
   #landing img {
     width: 30vw;
     max-width: 300px;
-  }
-  #landing h1 {
-    background-color: red;
-    max-width: 40px;
-    max-height: 40px;
-  }
-}
-
-@media (min-width: 850px) {
-  #landing img {
     margin-right: 15vw;
   }
+
 }
