--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -3,6 +3,10 @@ main {
   margin-top: 50px;
 }
 
+main h1 {
+  color: black;
+}
+
 /* contenu: h1, p et img */
 #landing {
   display: grid;
@@ -39,5 +43,4 @@ span.highlight {
     max-width: 300px;
     margin-right: 15vw;
   }
-
 }
