--- a/styles/pages/support.css
+++ b/styles/pages/support.css
@@ -1,21 +1,15 @@
+/* disposition des titres  */
 div > h1,
 h3 {
   display: flex;
   justify-content: center;
 }
 
+/* centrer les inputs au centre du form */
 #inputs {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-h1 {
-  color: var(--primary-color);
-}
-
-h2 {
-  color: var(--second-color);
 }
 
 .contact-inputs {
