--- a/styles/common.css
+++ b/styles/common.css
@@ -129,3 +129,11 @@ span.highlight {
 span.highlight-like {
   color: var(--second-color);
 }
+
+.brick {
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 16px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
