--- a/styles/pages/biens.css
+++ b/styles/pages/biens.css
@@ -32,9 +32,17 @@
 
 #achat {
   margin-top: 30px;
+  min-width: 150px;
+  width:10vw
 }
 
-#découvrir {
+#achat form{
+  display:flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+#infos {
   margin-top: 30px;
   display: flex;
   justify-content: center;
