--- a/styles/pages/biens.css
+++ b/styles/pages/biens.css
@@ -33,11 +33,11 @@
 #achat {
   margin-top: 30px;
   min-width: 150px;
-  width:10vw
+  width: 10vw;
 }
 
-#achat form{
-  display:flex;
+#achat form {
+  display: flex;
   flex-direction: column;
   gap: 15px;
 }
