--- a/styles/pages/biens.css
+++ b/styles/pages/biens.css
@@ -1,14 +1,15 @@
 /* grid photos du bien */
 #gallerie-photos {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 2vw;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 1vw;
   grid-row-gap: 1vh;
+  width: 10vw;
 }
 
 /* photos du bien */
 .photo img {
-  width: 30vw;
+  width: 22vw;
   border-radius: 10px;
   box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.2);
 }
@@ -26,12 +27,10 @@
 }
 
 #caracteristiques div {
-  width: 30vw;
   font-size: 1.1em;
 }
 
 #achat {
-  margin-top: 30px;
   min-width: 150px;
   width: 10vw;
 }
@@ -64,4 +63,11 @@
   .photo img {
     width: 90vw;
   }
+}
+
+#landing {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
 }
