--- a/styles/pages/biens.css
+++ b/styles/pages/biens.css
@@ -56,9 +56,7 @@
   }
 
   #achat form {
-    display: flex;
     flex-direction: column;
-    gap: 15px;
   }
 }
 
@@ -68,8 +66,6 @@
   }
 
   #achat form {
-    display: flex;
-    gap: 15px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -89,9 +85,7 @@
     width: 60vw;
   }
   #achat form {
-    display: flex;
     flex-direction: column;
-    gap: 15px;
     align-items: flex-start;
   }
 }
@@ -103,11 +97,13 @@
   .photo img {
     width: 85vw;
   }
-}
-
-@media (max-width: 370px) {
   #caracteristiques {
     grid-template-columns: 1fr 1fr;
     gap: 12px;
   }
+}
+
+#achat form {
+  display: flex;
+  gap: 15px;
 }
