--- a/styles/pages/biens-iframes.css
+++ b/styles/pages/biens-iframes.css
@@ -37,8 +37,11 @@
   height: auto;
 }
 
-
-
 .iframe-manager #biens {
   display: none;
+}
+
+.iframe-manager h2 {
+  font-weight: normal;
+  font-size: 1rem;
 }
