--- a/styles/pages/biens.css
+++ b/styles/pages/biens.css
@@ -21,7 +21,6 @@ body:not(.iframe-manager) #prix {
   width: 400px;
   max-width: 400px;
   border-radius: 10px;
-  box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.2);
 }
 
 #achat {
@@ -44,6 +43,16 @@ body:not(.iframe-manager) #prix {
 
 #caracteristiques div {
   font-size: 1.1em;
+}
+
+h3{
+  font-weight: normal;
+  font-size: 1rem;
+}
+
+.price-size{
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 @media (max-width: 1499px) {
